--- a/index.html
+++ b/index.html
@@ -910,7 +910,7 @@
 
     <!-- 沉浸式体验输入框（新增） -->
     <div class="immersive-standalone-input-container">
-        <input type="text" class="immersive-standalone-text-input" id="immersiveStandaloneTextInput" placeholder=" You can say anything you want.">
+        <input type="text" class="immersive-standalone-text-input" id="immersiveStandaloneTextInput" placeholder=" You can ask anything you want.">
         <button class="immersive-standalone-send-btn" id="immersiveStandaloneSendBtn">发送</button>
     </div>
 
