--- a/index.html
+++ b/index.html
@@ -167,6 +167,12 @@
                 width: 70px !important;
                 height: 70px !important;
             }
+            
+            /* 小屏手机语音提示文字 */
+            .voice-hint {
+                font-size: 10px !important;
+                bottom: -18px !important;
+            }
             /* 小屏手机AI反馈文字适配 - 已移至新的对话框样式 */
             #shaonvGirl {
                 height: 100vh !important;
